vega/layouts.css
@media only screen and (max-width: 1300px) {
    .sidebar {
        height: calc(100vh - 75px);
        padding: 30px 35px;
    }
    .image_showcase {
        max-height: calc(100vh - 75px);
    }
    .image_showcase .collage {
        padding: 0 35px;
    }
    .image_showcase .collage .collage_wrapper {
        grid-gap: 60px 15px;
    }
}

@media only screen and (max-width: 1000px) {
    .sidebar {
        padding: 30px 30px;
    }
    .image_showcase .collage {
        padding: 0 20px;
    }
    .image_showcase .collage .collage_wrapper {
        grid-gap: 60px 15px;
    }
}

@media only screen and (max-width: 700px) {
    main {
        display: block;
    }
    .mobile_toolbar {
        display: flex;
    }
    .sidebar {
        display: none;
    }
    .image_showcase .collage {
        padding: 0 15px;
    }
    .image_showcase .collage .collage_wrapper {
        grid-gap: 60px 15px;
    }
}

@media only screen and (max-width: 600px) { /* PHONE LAYOUT*/
    .image_showcase .collage .collage_title {
        font-size: 36px;
        padding-top: 50px;
        padding-bottom: 30px;
    }
}

